# spy-vol-project

./: .gitignore  CLAUDE.md  FINDINGS.md  FORECASTING.md  LICENSE  Makefile  Outline.md  README.md  STATISTICAL_RIGOR.md  STRATEGY.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
analysis/: black76.py  black76_tail_floor_demo.py  black76_tail_floor_demo_results.json  capacity.py  capacity_results.json  cross_vehicle.py  cross_vehicle_results.json  drawdown_inference.py  drawdown_inference_results.json  execution_lag.py  execution_lag_results.json  factor_regression.py  factor_regression_results.json  forecast_bench.py  forecast_bench_results.json  gap_risk_mc.py  gap_risk_mc_results.json  make_figure.py  make_figure_deep.py  make_figure_forecast.py  make_figure_iv_surface.py  make_figure_strategy.py  make_figure_tearsheet.py  paper_log.csv  paper_log.py  phase05_reframe.py  phase05b_profile.py  phase0_gonogo.py  phase1_deep_history.py  phase1_robustness.py  phase1_robustness_results.json  phase2_learned_flip.py  phase_skew.py  phase_skew_results.json  risk_tearsheet.py  risk_tearsheet_results.json  rolling_metrics_results.json  rvutil.py  strategy_curves.csv  strategy_results.json  (+5 more)
backtest/: ablation.py  case_studies.py  metrics.py  montecarlo.py  run_rl_eval.py  runner.py  sensitivity.py  sizing.py  sizing_advanced.py  threshold_sweep.py  walk_forward.py
configs/: databento_pulls.yaml  experiment.yaml  features.yaml  free_pulls.yaml
docs/: ARCHITECTURE.md  strategy-extensions-research.md  v1-retrospective.md
docs/superpowers/specs/: 2026-05-29-gamma-regime-vol-design.md  2026-05-30-two-sleeve-strategy-plan.md
features/: assemble.py  fast_iv.py  gex.py  microstructure.py  opra_panel.py  rv_target.py  skew.py  vix_termstructure.py
ingest/: build_id_list.py  cost_model.py  databento_pull.py  deep_pull.py  diagnose.py  fred_pull.py  vix_futures_pull.py  yfinance_pull.py
legacy/: Project Plan.md  README.md  ship.md
legacy/backtest/: execution.py  execution_lfs.py  regime_hmm.py  runner_v2.py
legacy/live/: __init__.py  predict_today.py
legacy/models/: base.py  bayesian_head.py  rl_sizing.py
legacy/notebooks/: 01_strategy_thesis_and_data.ipynb
legacy/paper/: spy_vol.out
legacy/tests/: test_execution_sized.py  test_no_lookahead.py
models/: __init__.py  ensemble.py  factory.py  har_x.py  logistic.py  logistic_interactions.py  mlp_small.py  sequence_lstm.py  xgb_calibrated.py
notebooks/: 02_signal_construction.ipynb  03_models_and_results.ipynb  strategy_walkthrough.ipynb
paper/: spy_vol.aux  spy_vol.tex
report/: explain.py  figures.py  findings_pdf_header.tex  render.py
tests/: test_black76.py  test_fast_iv.py  test_forecast_bench.py  test_gap_risk_mc.py  test_live.py  test_metrics.py  test_paper_log.py  test_pipeline_smoke.py  test_risk_tearsheet.py  test_sizing.py  test_strategy.py  test_vix_futures_curve.py  test_vix_futures_term_pca.py
